add completion snippet for-in-loop